--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,31 @@
     <title>Vite + React</title>
   </head>
   <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <header>
+      <img src="./src/assets/nihon.png" alt="niponcastle" class="sm">
+      <div class="cho">
+        <h1>日本の食べ物</h1>
+        <h2>Nihon no Tabemono </h2>
+      </div>
+    </header>
+
+    <article class="dork">
+      <div class="roi">
+        <img src="./src/assets/japfood.jpg" alt="japanessefoodphoto" class="ort">
+        <img src="./src/assets/rmn.jpg" alt="japanessefoodphoto" class="ort">
+        <img src="./src/assets/kbe.jpg" alt="japanessefoodphoto" class="ort">
+      </div>
+
+    </article>
+
+    <main>
+      <div id="root"></div>
+      <script type="module" src="/src/main.jsx"></script>
+    </main>
+    
+    <footer class="udf">
+      <a target="_blank" href="https://github.com/Runster91/trickortreat/tree/master/server" ><img class="sm" src="./src/assets/gh.png" alt="ghlogo"> 
+    </footer> 
+
   </body>
 </html>
